--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <option value="3">Amapa</option>
             <option value="4">Amazonas</option>
         </select>
+        <textarea name="comentario" id=""></textarea>
+        <br>
 <button type="submit">Enviar</button>
 <button type="reset">Apagar</button>
     </form>
