--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="https://formspree.io/f/mjkbrkwv" method="post">
         <p>Digite seu nome: </p>
         <input type="text" name="nome" placeholder="nome completo"> <br>
         <input type="email" name="email" value="@escola.pr.gov.br"> <br>
