--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <input type="radio" name="trabalho" value="Não"> Sem certeza
         <input type="checkbox" name="novidades" checked> aceitos receber novidades da empresa
         <select name="estados" id="">
-            <option value="1">Acre</option>
-            <option value="2">Alagoas</option>
-            <option value="3">Amapa</option>
-            <option value="4">Amazonas</option>
+            <option value="1">EU</option>
+            <option value="2">AVOCE</option>
+            <option value="3">DOIS FILHOS</option>
+            <option value="4">E UM CACHORRO</option>
         </select>
         <textarea name="comentario" id=""></textarea>
         <br>
