--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="https://formspree.io/f/mjkbrkwv" method="post">
+    <form action="https://formspree.io/f/mvgprgay" method="post">
         <p>Digite seu nome: </p>
         <input type="text" name="nome" placeholder="nome completo"> <br>
         <input type="email" name="email" value="@escola.pr.gov.br"> <br>
@@ -15,10 +15,10 @@
         <input type="radio" name="trabalho" value="Não"> Sem certeza
         <input type="checkbox" name="novidades" checked> aceitos receber novidades da empresa
         <select name="estados" id="">
-            <option value="1">EU</option>
-            <option value="2">AVOCE</option>
-            <option value="3">DOIS FILHOS</option>
-            <option value="4">E UM CACHORRO</option>
+            <option value="1">Acre</option>
+            <option value="2">Alagoas</option>
+            <option value="3">Amapa</option>
+            <option value="4">Amazonas</option>
         </select>
         <textarea name="comentario" id=""></textarea>
         <br>
